starting integration test for admissibility consumer