@@ -90,6 +90,12 @@
             <version>1.0.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>de.flapdoodle.embed</groupId>
+            <artifactId>de.flapdoodle.embed.mongo</artifactId>
+            <scope>test</scope>
+            <version>3.4.6</version>
+        </dependency>
 
     </dependencies>
     <dependencyManagement>
@@ -118,6 +124,14 @@
                     <target>17</target>
                 </configuration>
             </plugin>
+            <plugin>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+                <argLine>
+                    --add-opens java.base/java.lang=ALL-UNNAMED
+                </argLine>
+            </configuration>
+        </plugin>
         </plugins>
     </build>
 
